<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dash_nav_home"
            android:icon="@drawable/dash_nav_home_icon"
            android:title="@string/dash_nav_home" />
        <item
            android:id="@+id/dash_nav_missing_place"
            android:icon="@drawable/dash_nav_add_missing_place_icon"
            android:title="@string/dash_nav_add_missing_place" />
        <item
            android:id="@+id/dash_nav_notify_disparity"
            android:icon="@drawable/dash_nav_notify_disparity_icon"
            android:title="@string/dash_nav_notify_disparity" />
    </group>


    <item android:title="@string/dash_nav_profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dash_nav_login"
                    android:icon="@drawable/dash_nav_login_icon"
                    android:title="@string/dash_nav_login" />
                <item
                    android:id="@+id/dash_nav_profile"
                    android:icon="@drawable/dash_nav_profile_icon"
                    android:title="@string/dash_nav_profile" />
                <item
                    android:id="@+id/dash_nav_logout"
                    android:icon="@drawable/dash_nav_logout_icon"
                    android:title="@string/dash_nav_logout" />
            </group>
        </menu>
    </item>


    <item android:title="@string/dash_nav_categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dash_nav_cafeteria"
                    android:icon="@drawable/dash_cafeteria_icon"
                    android:title="@string/dash_cafeteria" />
                <item
                    android:id="@+id/dash_nav_sac"
                    android:icon="@drawable/dash_sac_icon"
                    android:title="@string/dash_sac" />
                <item
                    android:id="@+id/dash_nav_library"
                    android:icon="@drawable/dash_library_icon"
                    android:title="@string/dash_library" />
                <item
                    android:id="@+id/dash_nav_department"
                    android:icon="@drawable/dash_department_icon"
                    android:title="@string/dash_departments" />
            </group>
        </menu>
    </item>

    <item android:title="@string/dash_nav_share">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dash_nav_share"
                    android:icon="@drawable/dash_nav_share_icon"
                    android:title="@string/dash_nav_share" />
                <item
                    android:id="@+id/dash_nav_rate_us"
                    android:icon="@drawable/dash_nav_rate_icon"
                    android:title="@string/dash_nav_rate_us" />
            </group>
        </menu>
    </item>

</menu>