<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".User.UserResponse.NotifyDisparity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/notify_disparity_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/mis_back_icon"
            android:transitionName="transition_back_arrow_btn"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/allerta_stencil"
            android:text="@string/dis_notify_disparity"
            android:textAllCaps="true"
            android:textColor="@color/charcoal"
            android:textSize="40sp"
            android:transitionName="transition_title_text" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mis_email_id"
                android:textColorHint="@color/charcoal"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/charcoal"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/charcoal"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/mis_email_icon"
                app:startIconTint="@color/charcoal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dis_email_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mis_subject"
                android:textColorHint="@color/charcoal"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/charcoal"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/charcoal"
                app:helperText="(Subject-Write Place Name which has wrong info.)"
                app:hintTextColor="@color/charcoal"
                app:startIconDrawable="@drawable/mis_subject_icon"
                app:startIconTint="@color/charcoal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dis_subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailSubject" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/mis_body"
                android:textColorHint="@color/charcoal"
                android:theme="@style/ThemeOverlay.AppTheme.TextInputEditText.Outlined"
                app:boxStrokeColor="@color/charcoal"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/charcoal"
                app:hintTextColor="@color/charcoal"
                app:startIconDrawable="@drawable/mis_body_icon"
                app:startIconTint="@color/charcoal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dis_body"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dis_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:backgroundTint="#00000000"
            android:elevation="10dp"
            android:text="@string/mis_send"
            android:textColor="@color/charcoal" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>